Final revision..... hopefully

--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -147,7 +147,7 @@
 }
 
 @misc{IndoorAtlas,
-  author = {Indoor Atlas Ltd.},
+  author = {Indoor Atlas, Ltd.},
   title = {Indoor Atlas},
   year = 2016,
   howpublished = {\url{https://www.indooratlas.com}},
@@ -156,7 +156,7 @@
 }
 
 @misc{ApacheKafka,
-  author = {The Apache Software Foundation},
+  author = {Apache, Software Foundation},
   title = {Apache Kafka},
   year = 2016,
   howpublished = {\url{http://kafka.apache.org/}},
@@ -165,7 +165,7 @@
 }
 
 @misc{ApacheSpark,
-  author = {The Apache Software Foundation},
+  author = {Apache, Software Foundation},
   title = {{Apache} Spark},
   year = 2016,
   howpublished = {\url{http://spark.apache.org/}},
@@ -175,7 +175,7 @@
 }
 
 @misc{ApacheSparkStreaming,
-  author = {The Apache Software Foundation},
+  author = {Apache, Software Foundation},
   title = {Apache Spark Streaming},
   year = 2016,
   howpublished = {\url{http://spark.apache.org/streaming/}},
@@ -186,12 +186,21 @@
 
 
 @misc{ApacheCassandra,
-  author = {The Apache Software Foundation},
+  author = {Apache, Software Foundation},
   title = {Apache Cassandra},
   year = 2016,
   howpublished = {\url{http://cassandra.apache.org/}},
   url = {http://cassandra.apache.org/},
   note = {Accessed: 2016-08-31}
+}
+
+@misc{ECLEmma,
+  author = {Mountainminds, GmbH},
+  title = {ECL Emma},
+  year = 2016,
+  howpublished = {\url{http://www.eclemma.org/}},
+  url = {http://www.eclemma.org/},
+  note = {Accessed: 2016-09-03}
 }
 
 @inproceedings{cheon2002simple,
