--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -104,7 +104,7 @@ Visually impaired people
 \item[.] Research into hardware requirements of frameworks should be done early.
 \item[.] Identification of sensor fusion techniques is necessary and must fit the specific purpose of use and the type of inputs available.
 \item[.] Managing risk is valuable in ensuring the project does not fail and decoupling of components provided risk mitigation.
-\item[.] Investigate the limitations of platforms like Android early to mitigate the risk of wasted effort.
+\item[.] Investigate the limitations of platforms like Android early enough to mitigate the risk of wasted effort.
 \item[.] New programming language may ease coding particularly Scala for Spark. Library support differs with regards to programming languages.
 \end{itemize}
 
